Seperation of concerns for javascript files.  Fixed issue with table too wide.

--- a/src/main/webapp/styles/components/datatables-custom.scss
+++ b/src/main/webapp/styles/components/datatables-custom.scss
@@ -1,11 +1,10 @@
-.cell-width-200 {
+// Use for cells with long content that need to be shortened.
+.cell-restricted {
   text-align: left;
-  width: 200px !important;
   wrap: nowrap;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  font-size: 14px;
 }
 
 .filter-row {
@@ -39,7 +38,7 @@
 
 .dataTables_scroll, .table-wrapper {
   border: 1px solid #DDDDDD;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 2px 4px rgba(0,0,0,0.18);
 }
 
 .dataTables_scroll table.table {
@@ -121,6 +120,5 @@ table.selectable tbody tr.selected td {
 
 .dt-filter-btns {
   margin: 0!important;
-  padding-left: 53px;
 }
 
